--- a/index.asciidoc
+++ b/index.asciidoc
@@ -104,7 +104,9 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 ====
 
 === Media Type Identifier
-The +WeSTL+ document format is primarily designed to be used as an _internal_ message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose +WeSTL+ documents directly on the Web. For cases where the +WeSTL+ document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a +WeSTL+ document and SHOULD be used by the server when responding with a +WeSTL+ document.
+The +WeSTL+ document format is primarily designed to be used as an _internal_ message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose +WeSTL+ documents directly on the Web. 
+
+For cases where the +WeSTL+ document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a +WeSTL+ document and SHOULD be used by the server when responding with a +WeSTL+ document.
 
 
 == The +WeSTL+ Document Model
