--- a/index.asciidoc
+++ b/index.asciidoc
@@ -15,26 +15,32 @@ Status::
   *[white green-background]#Approved by IANA#* -- _This specification will not introduce any breaking changes for this media-type._
 ////
 
+Proposed IANA Registrations::
+  +application/prs.wstl+json+
+
+Repository::
+  https://github.com/RWCBook/wstl-spec[]
+  
 Last Updated::
   {docdate}
 
 == General
-This document contains the specifications for the +WeSTL+ format used in the book _RESTful Web Clients_ <<rwcbook, [RWCBook]>> by Mike Amundsen. This format is used to drive the server-side representor pattern. The +WeSTL+ format exists in two different `states'. In its *design-time* state, it contains the list of all possible state transitions for a Web service. In its *runtime* state, it contains the list of the _selected_ transitions for the current resource along with any data assocaited with that resource. The *design-time* document can be used to define all possible transitions including possible arugments for querying or writing data. The *runtime* document can be passed to a module that can turn the +WeSTL+ document into a _representation_ format (e.g. HTML, Collection+JSON, HAL, etc.).
+This document contains the specifications for the *WeSTL* format used in the book _RESTful Web Clients_ <<rwcbook, [RWCBook]>> by Mike Amundsen. This format is used to drive the server-side representor pattern. The *WeSTL* format exists in two different `states'. In its *design-time* state, it contains the list of all possible state transitions for a Web service. In its *runtime* state, it contains the list of the _selected_ transitions for the current resource along with any data assocaited with that resource. The *design-time* document can be used to define all possible transitions including possible arugments for querying or writing data. The *runtime* document can be passed to a module that can turn the *WeSTL* document into a _representation_ format (e.g. HTML, Collection+JSON, HAL, etc.).
 
 === Design Goals
-This format was designed to make it easier for service developers to focus on the state transition details of a Web service instead of the resource details. To that end, a minimal +WeSTL+ document contains a list of possible state transitions.
+This format was designed to make it easier for service developers to focus on the state transition details of a Web service instead of the resource details. To that end, a minimal *WeSTL* document contains a list of possible state transitions.
 
 The *design-time* version of the document contains nothing more than a list of possible state transitions. Each transition contains meta-data about the transition including possible arguments to be used to executing queries or writing data. There is no indication of which _resource_ to which these transitions belong. In fact, many of the transitions will occur on several resouces. For example the +home+ transition (that leads to the home page of the service) might appear on _every_ resource.
 
-The *runtime* version of the document contains a filtered list of the state transitions -- the ones that apply to the current resource request -- along with a collection of data associated with that same resource request. In this case, the +WeSTL+ document represents all the _applicable_ state transitions for the current runtime context. Since this document has a standardized format, it can be populated and then passed to a module designed to convert the +WeSTL+ document into a registered media type format such as HTML, HAL, Collection+JSON, etc.
+The *runtime* version of the document contains a filtered list of the state transitions -- the ones that apply to the current resource request -- along with a collection of data associated with that same resource request. In this case, the *WeSTL* document represents all the _applicable_ state transitions for the current runtime context. Since this document has a standardized format, it can be populated and then passed to a module designed to convert the *WeSTL* document into a registered media type format such as HTML, HAL, Collection+JSON, etc.
 
-Thus, there are two goals for the +WeSTL+ format:
+Thus, there are two goals for the *WeSTL* format:
 
  . Provide an easy way for service developers to focus on state transitions
  . Provide a standard format for representor programmers to convert internal service state into registered media type representations.
 
 === Sample Document
-Below is a sample +WeSTL+ document (in its *runtime* mode). It contains a list of all the _appropriate state transitions for a running Web service in a specific state.
+Below is a sample *WeSTL* document (in its *runtime* mode). It contains a list of all the _appropriate_ state transitions for a running Web service in a specific state.
 
 ----
 {
@@ -93,7 +99,10 @@ Below is a sample +WeSTL+ document (in its *runtime* mode). It contains a list o
 }
 ----
 
-See the <<sample-documents, Sample WeSTL Documents>> section for details on this and other +WeSTL+ examples.
+See the <<sample-documents, Sample WeSTL Documents>> section for details on this and other *WeSTL* examples.
+
+=== Updates
+There is an open source repository <<repo,[REPO]>> for this specification. Readers are encouraged to submit updates via the repository any time.
 
 === Compliance
 An implementation is not compliant if it fails to satisfy one or more of the MUST or REQUIRED elements. An implementation that satisfies all the MUST and REQUIRED elements as well as all the SHOULD and RECOMMENDED elements is said to be "unconditionally compliant"; one that satisfies all the MUST and REQUIRED elements but not all the SHOULD and RECOMMENDED elements is said to be "conditionally compliant."
@@ -104,16 +113,16 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 ====
 
 === Media Type Identifier
-The +WeSTL+ document format is primarily designed to be used as an _internal_ message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose +WeSTL+ documents directly on the Web. 
+The *WeSTL* document format is primarily designed to be used as an _internal_ message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose *WeSTL* documents directly on the Web. 
 
-For cases where the +WeSTL+ document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a +WeSTL+ document and SHOULD be used by the server when responding with a +WeSTL+ document.
+For cases where the *WeSTL* document will be sent as a document over the WWW, the proper media type identifier string to use is: +application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a *WeSTL* document and SHOULD be used by the server when responding with a *WeSTL* document.
 
 
-== The +WeSTL+ Document Model
-The +WeSTL+ document MUST be a valid JSON document per <<RFC4627,[RFC4627]>>. A +WeSTL+ document has a very simple format. However, it is also easily extended to fit a local Web service implementor's needs. Below is a top-down survey of the +WeSTL+ document model.
+== The WeSTL Document Model
+The *WeSTL* document MUST be a valid JSON document per <<RFC4627,[RFC4627]>>. A *WeSTL* document has a very simple format. However, it is also easily extended to fit a local Web service implementor's needs. Below is a top-down survey of the *WeSTL* document model.
 
 === The +wstl+ Object
-The +wstl+ object is the root object of every +WeSTL+ document. It has a small set of child properties and MAY be extended with custom properties.
+The +wstl+ object is the root object of every *WeSTL* document. It has a small set of child properties and MAY be extended with custom properties.
 
 ==== Quick View
 The +wstl+ object looks like this:
@@ -134,7 +143,7 @@ The +wstl+ object looks like this:
 Here are the details:
 
 +wstl+ :: 
- The top-level element in every +WeSTL+ document. This is a REQUIRED element.
+ The top-level element in every *WeSTL* document. This is a REQUIRED element.
 
 +actions+ ::
  A RECOMMENDED child property of the +wstl+ element. If it exists, it MUST be an array of +action+ objects (see below). Parsers MUST continue to process this document even when this element is missing.
@@ -187,7 +196,7 @@ Here are the details:
  +prompt+::
   Contains a string that represents the human prompt for this transition. This value can be used as labels for links and forms.
  +href+::
-  Contains the URL associated with the transition. This value SHOULD only be populated in the *runtime* version of +WeSTL+ documents but MAY be set at *design-time*. If populated, this value MUST comply with the rules of <<rfc3986,[RFC3986]>>
+  Contains the URL associated with the transition. This value SHOULD only be populated in the *runtime* version of *WeSTL* documents but MAY be set at *design-time*. If populated, this value MUST comply with the rules of <<rfc3986,[RFC3986]>>
  +rel+::
   Contains an array of link relation values for the transition. This value MUST comply with the rules of <<rfc5988,[RFC5988]>>
  +inputs+::
@@ -320,11 +329,11 @@ The +suggest+ related data object is an OPTIONAL object with three properties fo
  This contains the _property-name_ of the items in the list pointed to by the +related+ property. This is a REQUIRED property. This will be used as the _display value_ when rendering input options. If this property is missing or set to a value that does not match a property name in the +related+ section list, then this +suggest+ object SHOULD be ingored.
 
 [[sample-documents]]
-== Sample +WeSTL+ Documents
-Below are sample +WeSTL+ documents for reference.
+== Sample WeSTL Documents
+Below are sample *WeSTL* documents for reference.
 
-=== A Design-Time +WeSTL+ Document
-Below is a +WeSTL+ document in its *design-time* mode. It conatins a list of all the possible state transitions for a Web service offering a seach service.
+=== A Design-Time WeSTL Document
+Below is a *WeSTL* document in its *design-time* mode. It conatins a list of all the possible state transitions for a Web service offering a seach service.
 
 ----
 {
@@ -383,8 +392,8 @@ Note that this document contains three state transitions:
  . The one that leads to the search form (+searchLink+) 
  . The one that leads to the search results (+searchForm+)
  
-=== A Run-Time +WeSTL+ Document
-Below is a +WeSTL+ document in its *runtime* mode. It conatins a list of all the _appropriate state transitions for a running Web service in a specific state. In this case, this document represents the state of the service once it has executed a search and is ready for the next inputs.
+=== A Run-Time WeSTL Document
+Below is a *WeSTL* document in its *runtime* mode. It conatins a list of all the _appropriate_ state transitions for a running Web service in a specific state. In this case, this document represents the state of the service once it has executed a search and is ready for the next inputs.
 
 ----
 {
@@ -443,17 +452,17 @@ Below is a +WeSTL+ document in its *runtime* mode. It conatins a list of all the
 }
 ----
 
-Note the transition that represents the execute-able FORM contains the last search value (this is not a requirement, just a nice touch). Also note the +data+ section that represents the data records found in the last search execution. Finally, you may notice that the +searchLink+ transition is missing in this runtime instance of the +WeSTL+ document. The service has apparently decided that there is no need for this link since the current resouce context includes an instance of the search form already.
+Note the transition that represents the execute-able FORM contains the last search value (this is not a requirement, just a nice touch). Also note the +data+ section that represents the data records found in the last search execution. Finally, you may notice that the +searchLink+ transition is missing in this runtime instance of the *WeSTL* document. The service has apparently decided that there is no need for this link since the current resouce context includes an instance of the search form already.
 
-== Extending +WeSTL+ Documents
-Any +WeSTL+ document can be extended in both the *design-time* and *runtime* modes. The only rules that MUST be followed are:
+== Extending WeSTL Documents
+Any *WeSTL* document can be extended in both the *design-time* and *runtime* modes. The only rules that MUST be followed are:
 
- . You MUST NOT remove any existing properties or objects listed in the +WeSTL+ specification.
- . You MUST NOT change the meaning or use of any existing properties or objects listed in the +WeSTL+ specification. 
- . You MAY add new properties and objects as long as they do not cause existing compliant +WeSTL+ document parsers to fail.
+ . You MUST NOT remove any existing properties or objects listed in the *WeSTL* specification.
+ . You MUST NOT change the meaning or use of any existing properties or objects listed in the *WeSTL* specification. 
+ . You MAY add new properties and objects as long as they do not cause existing compliant *WeSTL* document parsers to fail.
 
 === Enclosing Your Extensions
-You SHOULD add new features in +WeSTL+ documents in a way that reduces the likelihood that future changes to the standard format as well as extensions from other document authors will cause a conflict with your extensions. Typically, this means using a unique name for an enclosing object to hold all your extensions. 
+You SHOULD add new features in *WeSTL* documents in a way that reduces the likelihood that future changes to the standard format as well as extensions from other document authors will cause a conflict with your extensions. Typically, this means using a unique name for an enclosing object to hold all your extensions. 
 
 For example, the following shows how to safely add the +rolloverText+ extension by enclosing it in a unique identifying object named +"amundsen"+:
 
@@ -472,12 +481,13 @@ For example, the following shows how to safely add the +rolloverText+ extension 
   },
 ----
  
-This opens a wide set of possibilities for extending +WeSTL+ documents. 
+This opens a wide set of possibilities for extending *WeSTL* documents. 
 
 == References
 Below are the references used in this document.
 
  * [[rwcbook]] [RWCBook] Amundsen, M., "RESTful Web Clients", January 2017, http://g.mamund.com/rwcbook
+ * [[repo]] [REPO] Github, "Web Service Transition Language", https://github.com/RWCBook/wstl-spec
  * [[rfc2119]] [RFC2119] Bradner, S.,"Key words for use in RFCs to Indicate Requirement Levels", March 1997, http://tools.ietf.org/html/rfc2119
  * [[rfc3986]] [RFC3986] Berners-Lee, T., Fielding, R., and L. Masinter,"Uniform Resource Identifier (URI): Generic Syntax", January 2005, http://tools.ietf.org/html/rfc3986
  * [[rfc4627]] [RFC4627] D. Crockford, "The application/json Media Type for JavaScript Object Notation (JSON)", July 2006, http://tools.ietf.org/html/rfc4627
