Fix typo (assocaited => associated)

--- a/index.asciidoc
+++ b/index.asciidoc
@@ -25,7 +25,7 @@ Last Updated::
   {docdate}
 
 == General
-This document contains the specifications for the *WeSTL* format used in the book _RESTful Web Clients_ <<rwcbook, [RWCBook]>> by Mike Amundsen. This format is used to drive the server-side representor pattern. The *WeSTL* format exists in two different `states'. In its *design-time* state, it contains the list of all possible state transitions for a Web service. In its *runtime* state, it contains the list of the _selected_ transitions for the current resource along with any data assocaited with that resource. The *design-time* document can be used to define all possible transitions including possible arugments for querying or writing data. The *runtime* document can be passed to a module that can turn the *WeSTL* document into a _representation_ format (e.g. HTML, Collection+JSON, HAL, etc.).
+This document contains the specifications for the *WeSTL* format used in the book _RESTful Web Clients_ <<rwcbook, [RWCBook]>> by Mike Amundsen. This format is used to drive the server-side representor pattern. The *WeSTL* format exists in two different `states'. In its *design-time* state, it contains the list of all possible state transitions for a Web service. In its *runtime* state, it contains the list of the _selected_ transitions for the current resource along with any data associated with that resource. The *design-time* document can be used to define all possible transitions including possible arugments for querying or writing data. The *runtime* document can be passed to a module that can turn the *WeSTL* document into a _representation_ format (e.g. HTML, Collection+JSON, HAL, etc.).
 
 === Design Goals
 This format was designed to make it easier for service developers to focus on the state transition details of a Web service instead of the resource details. To that end, a minimal *WeSTL* document contains a list of possible state transitions.
